# rust-sdui

./: Cargo.toml  LICENSE  leads?search=peter
.devcontainer/: setup.sh
src/: lib.rs  prelude.rs
src/auth/: mod.rs
src/channel/: mod.rs
src/chat/: mod.rs
src/cloud/: mod.rs
src/files/: mod.rs
src/grade/: mod.rs
src/news/: mod.rs
src/timetable/: mod.rs
src/timetable/processing/: mod.rs
src/user/: mod.rs
