[package]
name = "rust-sdui"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.11.13", features = ["serde_json", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[dev-dependencies]
tokio = { version = "1.23.0", features = ["rt", "macros"]}
